Added automatic quoting if contains a special character

--- a/RunWithPassword/RunWithPassword.fsproj
+++ b/RunWithPassword/RunWithPassword.fsproj
@@ -54,7 +54,7 @@
     <Compile Include="ProcessRunner.fs" />
     <None Include="App.config" />
     <Content Include="passdb.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
      <Content Include="test.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
